[package]
authors = ["Pollen Robotics <pierre@pollen-robotics.com>"]
categories = [
    "hardware-support",
    "no-std",
]
description = "Rust implementation of the Robotis Dynamixel motor protocol."
keywords = [
    "robotis",
    "dynamixel",
    "motor",
    "embedded-hal-impl",
]
license = "Apache-2.0"
name = "dynamixel"
version = "0.1.0"

[badges.travis-ci]
repository = "pollen-robotics/rustamixel"

[dependencies]
crc16 = "0.3.4"
embedded-hal = "0.1.2"
nb = "0.1.1"
