[package]
authors = ["Pollen Robotics <pierre@pollen-robotics.com>"]
categories = [
    "hardware-support",
    "no-std",
]
description = "Rust implementation of the Robotis Dynamixel motor protocol."
keywords = [
    "robotis",
    "dynamixel",
    "motor",
    "embedded-hal-impl",
]
license = "Apache-2.0"
name = "dynamixel"
version = "1.0.0"

[badges.travis-ci]
repository = "pollen-robotics/rustamixel"

[dependencies]
crc16 = "0.3.4"
nb = "0.1.1"

[dependencies.embedded-hal]
git = "https://github.com/pollen-robotics/embedded-hal"
rev = "b54d0060ab157638bc3023bb9c85e736fdef3016"

[dev-dependencies]
rand = "0.4.2"
